--- a/index.html
+++ b/index.html
@@ -40,19 +40,19 @@
           <div class="preview__text">
             <p>Открой для себя Азию</p>
           </div>
-          <preview class="button">
+          <div class="preview__button">
             <button class="button">Подробнее</button>
-          </preview>
+          </div>
         </div>
         <div class="hot-tours">
           <div class="hot-tours__title">
             <h2 class="hot-tours__title-text">Горящие туры</h2>
             <img src="" alt="Иконка огня" class="hot-tours__title-icon">
           </div>
-          <ul class="hot_tours-list">
-            <li class="hot_tours-item">
-              <div class="hot_tours-image">
-                <img src="#" alt="река" class="hot_tours-picture">
+          <ul class="hot-tours__list">
+            <li class="hot-tours__item">
+              <div class="hot-tours__image">
+                <img src="#" alt="река" class="hot-tours__picture">
               </div>
               <div class="hot-tours__content">
                 <h3 class="hot-tours__subtitle">Тайланд</h3>
@@ -77,9 +77,9 @@
                 </div>
               </div>
             </li>
-            <li class="hot_tours-item">
-              <div class="hot_tours-image">
-                <img src="#" alt="бассейн" class="hot_tours-picture">
+            <li class="hot-tours__item">
+              <div class="hot-tours__image">
+                <img src="#" alt="бассейн" class="hot-tours__picture">
               </div>
               <div class="hot-tours__content">
                 <h3 class="hot-tours__subtitle">Бали</h3>
@@ -104,9 +104,9 @@
                 </div>
               </div>
             </li>
-            <li class="hot_tours-item">
-              <div class="hot_tours-image">
-                <img src="#" alt="океан" class="hot_tours-picture">
+            <li class="hot-tours__item">
+              <div class="hot-tours__image">
+                <img src="#" alt="океан" class="hot-tours__picture">
               </div>
               <div class="hot-tours__content">
                 <h3 class="hot-tours__subtitle">Индонезия</h3>
@@ -148,7 +148,7 @@
             </li>
             <li class="news__item">
               <img src="" alt="Серфер" class="news__image">
-              <div class="news-content">
+              <div class="news__content">
                 <time class="news__date">Декабрь 2019</time>
                 <h3 class="news__subtitle">Акция для серфингистов!</h3>
                 <div class="news__text">
