--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <header class="header">
         <div class="logo">
           <a href="#" class="logo__link">
-            <img src="" alt="Лого" class="logo__icon">
+            <img src="./images/logo.png" alt="Лого" class="logo__icon">
           </a>
         </div>
         <nav class="menu">
@@ -32,7 +32,7 @@
         </nav>
         <address class="contacts">
           <a href="tel:+88007003030" class="contacts__tel">8 800 700 30 30</a>
-          <span class="contacts">График работы</span>
+          <span class="contacts__graph">График работы</span>
         </address>
       </header>
       <main class="main">
