--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <div class="wrapper">
+  <div class="wrapper main-page-wrapper">
     <div class="container">
       <header class="header">
         <div class="logo">
@@ -48,22 +48,22 @@
         <div class="hot-tours">
           <div class="hot-tours__title">
             <h2 class="hot-tours__title-text">Горящие туры</h2>
-            <img src="" alt="Иконка огня" class="hot-tours__title-icon">
+            <img src="./images/flame.png" alt="Иконка огня" class="hot-tours__title-icon">
           </div>
           <ul class="hot-tours__list">
             <li class="hot-tours__item">
               <div class="hot-tours__image">
-                <img src="#" alt="река" class="hot-tours__picture">
+                <img src="./images/river.png" alt="река" class="hot-tours__picture">
               </div>
               <div class="hot-tours__content">
                 <h3 class="hot-tours__subtitle">Тайланд</h3>
                 <div class="hot-tours__options">
                   <div class="hot-tours__options-item">
-                    <img src="" alt="" class="hot-tours__options-icon">
+                    <img src="./images/calendar.png" alt="" class="hot-tours__options-icon">
                     <span class="hot-tours__options-text">7- 12 ночей</span>
                   </div>
                   <div class="hot-tours__options-item">
-                    <img src="" alt="" class="hot-tours__options-icon">
+                    <img src="./images/meal.png" alt="" class="hot-tours__options-icon">
                     <span class="hot-tours__options-text">Завтраки</span>
                   </div>
                 </div>
@@ -74,23 +74,23 @@
                   </p>
                 </div>
                 <div class="hot-tours__button">
-                  <button class="button">Смотреть</button>
+                  <button class="button button--size">Смотреть</button>
                 </div>
               </div>
             </li>
             <li class="hot-tours__item">
               <div class="hot-tours__image">
-                <img src="#" alt="бассейн" class="hot-tours__picture">
+                <img src="./images/pool.png" alt="бассейн" class="hot-tours__picture">
               </div>
               <div class="hot-tours__content">
                 <h3 class="hot-tours__subtitle">Бали</h3>
                 <div class="hot-tours__options">
                   <div class="hot-tours__options-item">
-                    <img src="" alt="" class="hot-tours__options-icon">
+                    <img src="./images/calendar.png" alt="" class="hot-tours__options-icon">
                     <span class="hot-tours__options-text">7- 12 ночей</span>
                   </div>
                   <div class="hot-tours__options-item">
-                    <img src="" alt="" class="hot-tours__options-icon">
+                    <img src="./images/meal.png" alt="" class="hot-tours__options-icon">
                     <span class="hot-tours__options-text">Завтраки</span>
                   </div>
                 </div>
@@ -101,23 +101,23 @@
                   </p>
                 </div>
                 <div class="hot-tours__button">
-                  <button class="button">Смотреть</button>
+                  <button class="button button-color">Смотреть</button>
                 </div>
               </div>
             </li>
             <li class="hot-tours__item">
               <div class="hot-tours__image">
-                <img src="#" alt="океан" class="hot-tours__picture">
+                <img src="./images/ocean.png" alt="океан" class="hot-tours__picture">
               </div>
               <div class="hot-tours__content">
                 <h3 class="hot-tours__subtitle">Индонезия</h3>
                 <div class="hot-tours__options">
                   <div class="hot-tours__options-item">
-                    <img src="" alt="" class="hot-tours__options-icon">
+                    <img src="./images/calendar.png" alt="" class="hot-tours__options-icon">
                     <span class="hot-tours__options-text">7- 12 ночей</span>
                   </div>
                   <div class="hot-tours__options-item">
-                    <img src="" alt="" class="hot-tours__options-icon">
+                    <img src="./images/meal.png" alt="" class="hot-tours__options-icon">
                     <span class="hot-tours__options-text">Завтраки</span>
                   </div>
                 </div>
@@ -128,7 +128,7 @@
                   </p>
                 </div>
                 <div class="hot-tours__button">
-                  <button class="button">Смотреть</button>
+                  <button class="button button--size">Смотреть</button>
                 </div>
               </div>
             </li>
@@ -138,18 +138,18 @@
           <h2 class="news__title">Новости и акции</h2>
           <ul class="news__list">
             <li class="news__item">
-              <img src="" alt="Самолет" class="news__image">
+              <img src="./images/plain.png" alt="Самолет" class="news__image">
               <div class="news-content">
                 <time class="news__date">Декабрь 2019</time>
-                <h3 class="news__subtitle">Дешевые путевки на Новый год!</h3>
+                <h3 class="news__subtitle">Дешевые путевки на Новый Год!</h3>
                 <div class="news__text">
-                  <p>Проведи Новый год в Тайланде</p>
+                  <p>Проведи новый год в Тайланде</p>
                 </div>
               </div>
             </li>
             <li class="news__item">
-              <img src="" alt="Серфер" class="news__image">
-              <div class="news__content">
+              <img src="./images/Surfer.png" alt="Серфер" class="news__image">
+              <div class="news-content">
                 <time class="news__date">Декабрь 2019</time>
                 <h3 class="news__subtitle">Акция для серфингистов!</h3>
                 <div class="news__text">
@@ -162,7 +162,7 @@
             <div class="paginator__display">Страница <span>1</span> из <span>7</span></div>
             <ul class="paginator__list">
               <li class="paginator__item">
-                <a href="#" class="paginator__link">1</a>
+                <a href="#" class="paginator__link paginator-active">1</a>
               </li>
               <li class="paginator__item">
                 <a href="#" class="paginator__link">2</a>
@@ -186,69 +186,71 @@
           </div>
         </div>
         <div class="about">
-          <img src="" alt="" class="about__image">
+          <!-- <img src="./images/gates.png" alt="" class="about__image"> -->
           <div class="about__content">
-            <h2 class="about__title">О нас</h2>
-            <div class="about__text">
-              <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Minima quas magni nisi sed aliquam dicta.
-                Cupiditate commodi accusantium rem obcaecati quidem eius perspiciatis. Perferendis molestiae ea,
-                expedita
-                impedit eos cupiditate.
-              </p>
-            </div>
-            <div class="about__button">
-              <button class="button">Подробнее</button>
+            <!-- <img src="./images/mountains.png" alt="" class="about__content-image"-->
+            <div class="about__content-text">
+              <h2 class="about__title">О нас</h2>
+              <div class="about__text">
+                <p>Сайт рыбатекст поможет дизайнеру, верстальщику, вебмастеру сгенерировать
+                  несколько абзацев более менее осмысленного текста рыбы на русском языке,
+                  а начинающему оратору отточить навык публичных выступлений в домашних условиях.
+                </p>
+              </div>
+              <div class="about__button">
+                <button class="button">Подробнее</button>
+              </div>
             </div>
           </div>
         </div>
       </main>
-      <footer class="footer">
-        <div class="logo">
-          <a href="#" class="logo__link">
-            <img src="" alt="Лого" class="logo__icon">
-          </a>
+      <footer class="footer-container">
+        <div class="container footer-container__content">
+          <div class="footer">
+            <div class="logo">
+              <a href="#" class="logo__link">
+                <img src="./images/logo.png" alt="Лого" class="logo__icon">
+              </a>
+            </div>
+            <nav class="menu">
+              <ul class="menu__list">
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Главная</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Услуги</a>
+                </li>
+                <li class="menu__item">
+                  <a href="#" class="menu__link">Отзывы</a>
+                </li>
+              </ul>
+            </nav>
+            <div class="socials">
+              <ul class="socials__list">
+                <li class="socials__item">
+                  <a href="#" class="socials__link socials__icon-Tg">
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a href="#" class="socials__link socials__icon-Vk">
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a href="#" class="socials__link socials__icon-Fb">
+                  </a>
+                </li>
+                <li class="socials__item">
+                  <a href="#" class="socials__link socials__icon-Inst">
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <address class="contacts">
+              <div class="contacts__text">Бесплатный звонок по России</div>
+              <a href="tel:+88007003030" class="contacts__tel">8 800 700 30 30</a>
+            </address>
+          </div>
         </div>
-        <nav class="menu">
-          <ul class="menu__list">
-            <li class="menu__item">
-              <a href="#" class="menu__link">Главная</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">Услуги</a>
-            </li>
-            <li class="menu__item">
-              <a href="#" class="menu__link">Отзывы</a>
-            </li>
-          </ul>
-        </nav>
-        <div class="socials">
-          <ul class="socials__list">
-            <li class="socials__item">
-              <a href="#" class="socials__link">
-                <img src="#" alt="Телеграмм" class="socials__icon">
-              </a>
-            </li>
-            <li class="socials__item">
-              <a href="#" class="socials__link">
-                <img src="#" alt="Вк" class="socials__icon">
-              </a>
-            </li>
-            <li class="socials__item">
-              <a href="#" class="socials__link">
-                <img src="#" alt="Фэйсбук" class="socials__icon">
-              </a>
-            </li>
-            <li class="socials__item">
-              <a href="#" class="socials__link">
-                <img src="#" alt="Инстаграм" class="socials__icon">
-              </a>
-            </li>
-          </ul>
-        </div>
-        <address class="contacts">
-          <div class="contacts__text">Бесплатный звонок по России</div>
-          <a href="tel:+88007003030" class="contacts__tel">8 800 700 30 30</a>
-        </address>
       </footer>
     </div>
   </div>
