--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <p>Открой для себя Азию</p>
           </div>
           <div class="preview__button">
-            <button class="button">Подробнее</button>
+            <button class="button button--border">Подробнее</button>
           </div>
         </div>
         <div class="hot-tours">
@@ -186,9 +186,6 @@
           </div>
         </div>
         <div class="about">
-          <!-- <img src="./images/gates.png" alt="" class="about__image"> -->
-          <div class="about__content">
-            <!-- <img src="./images/mountains.png" alt="" class="about__content-image"-->
             <div class="about__content-text">
               <h2 class="about__title">О нас</h2>
               <div class="about__text">
@@ -198,10 +195,9 @@
                 </p>
               </div>
               <div class="about__button">
-                <button class="button">Подробнее</button>
+                <button class="button button--border">Подробнее</button>
               </div>
             </div>
-          </div>
         </div>
       </main>
       <footer class="footer-container">
