--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
-  <title>Document</title>
+  <title>Air-Asia Main page</title>
   <link rel="stylesheet" href="./CSS/main.css">
 </head>
 
@@ -15,20 +15,20 @@
       <header class="header">
         <div class="header__col">
           <div class="logo">
-            <a href="#" class="logo__link">
+            <a href="./index.html" class="logo__link">
               <img src="./images/logo.png" alt="Лого" class="logo__icon">
             </a>
           </div>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item">
-                <a href="#" class="menu__link">Главная</a>
+                <a href="./index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Услуги</a>
+                <a href="./services.html" class="menu__link">Услуги</a>
               </li>
               <li class="menu__item">
-                <a href="#" class="menu__link">Отзывы</a>
+                <a href="./reviews.html" class="menu__link">Отзывы</a>
               </li>
             </ul>
           </nav>
@@ -36,7 +36,13 @@
         <div class="header__col header__col--align--right">
           <address class="contacts">
             <a href="tel:+88007003030" class="contacts__tel">8 800 700 30 30</a>
-            <span class="contacts__graph">График работы</span>
+            <div class="schedule">
+              <div class="contacts__graph">График работы</div>
+              <div class="schedule__info">
+                <div class="schedule__worktime">пн-вс: 09:00 - 20:00</div>
+                <div class="schedule__lunch">Обед: 14:00-14:30</div>
+              </div>
+            </div>
           </address>
         </div>
       </header>
@@ -167,7 +173,7 @@
             <div class="paginator__display">Страница 1 из 7</div>
             <ul class="paginator__list">
               <li class="paginator__item">
-                <a href="#" class="paginator__link paginator-active">1</a>
+                <a href="#" class="paginator__link">1</a>
               </li>
               <li class="paginator__item">
                 <a href="#" class="paginator__link">2</a>
@@ -210,20 +216,20 @@
           <div class="footer footer__main-page">
             <div class="footer__col">
               <div class="logo">
-                <a href="#" class="logo__link">
+                <a href="./index.html" class="logo__link">
                   <img src="./images/logo.png" alt="Лого" class="logo__icon">
                 </a>
               </div>
               <nav class="menu">
                 <ul class="menu__list">
                   <li class="menu__item">
-                    <a href="#" class="menu__link">Главная</a>
+                    <a href="./index.html" class="menu__link">Главная</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#" class="menu__link">Услуги</a>
+                    <a href="./services.html" class="menu__link">Услуги</a>
                   </li>
                   <li class="menu__item">
-                    <a href="#" class="menu__link">Отзывы</a>
+                    <a href="./reviews.html" class="menu__link">Отзывы</a>
                   </li>
                 </ul>
               </nav>
