--- a/services.html
+++ b/services.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie-edge">
-  <title>Document</title>
+  <title>Air-Asia Services</title>
   <link rel="stylesheet" href="./CSS/main.css">
 </head>
 
@@ -16,20 +16,20 @@
         <header class="header top-line__header">
           <div class="header__col header--col">
             <div class="logo logo__service--page">
-              <a href="#" class="logo__link">
+              <a href="./index.html" class="logo__link">
                 <img src="./images/лого services.png" alt="Лого" class="logo__icon">
               </a>
             </div>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Главная</a>
+                  <a href="./index.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
@@ -37,7 +37,13 @@
           <div class="header__col header--col--align--right">
             <address class="contacts">
               <a href="tel:+88007003030" class="contacts__tel">8 800 700 30 30</a>
-              <span class="contacts__graph">График работы</span>
+              <div class="schedule">
+                <div class="contacts__graph">График работы</div>
+                <div class="schedule__info">
+                  <div class="schedule__worktime">пн-вс: 09:00 - 20:00</div>
+                  <div class="schedule__lunch">Обед: 14:00-14:30</div>
+                </div>
+              </div>
             </address>
           </div>
         </header>
@@ -45,10 +51,10 @@
         <nav class="breadcrumbs">
           <ul class="breadcrumbs__list">
             <li class="breadcrumbs__item">
-              <a href="#" class="breadcrumbs__link">Главная</a>
+              <a href="./index.html" class="breadcrumbs__link">Главная</a>
             </li>
             <li class="breadcrumbs__item breadcrumbs__item--active">
-              <a href="#" class="breadcrumbs__link">Услуги</a>
+              <a href="./services.html" class="breadcrumbs__link">Услуги</a>
             </li>
           </ul>
         </nav>
@@ -71,7 +77,7 @@
                   небезизвестный универсальный код речей.
                 </p>
               </div>
-              <a href="" class="button button-transparent">Подробнее</a>
+              <a href="" class="button button--transparent">Подробнее</a>
             </div>
           </li>
           <li class="services__item service">
@@ -96,7 +102,7 @@
           <div class="paginator__display">Страница 1 из 7</div>
           <ul class="paginator__list">
             <li class="paginator__item">
-              <a href="#" class="paginator__link paginator-active">1</a>
+              <a href="#" class="paginator__link">1</a>
             </li>
             <li class="paginator__item">
               <a href="#" class="paginator__link">2</a>
@@ -119,8 +125,7 @@
           </ul>
         </div>
       </div>
-    </main>
-    <section class="inner-section inner-section--bg--grey">
+      <section class="inner-section inner-section--bg--grey">
       <div class="container">
         <h2 class="inner-section__title">Партнеры</h2>
         <ul class="partners">
@@ -167,25 +172,26 @@
         </ul>
       </div>
     </section>
+    </main>
     <footer class="inner-footer">
       <div class="container inner-footer__container">
         <div class="footer">
           <div class="footer__col">
             <div class="logo logo__inner-footer">
-              <a href="#" class="logo__link">
+              <a href="./index.html" class="logo__link">
                 <img src="./images/лого services.png" alt="Лого" class="logo__icon">
               </a>
             </div>
             <nav class="menu">
               <ul class="menu__list">
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Главная</a>
+                  <a href="./index.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Услуги</a>
+                  <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
-                  <a href="#" class="menu__link">Отзывы</a>
+                  <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
             </nav>
