--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
           </div>
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__item">
+              <li class="menu__item menu__item-active">
                 <a href="./index.html" class="menu__link">Главная</a>
               </li>
               <li class="menu__item">
@@ -222,7 +222,7 @@
               </div>
               <nav class="menu">
                 <ul class="menu__list">
-                  <li class="menu__item">
+                  <li class="menu__item menu__item-active">
                     <a href="./index.html" class="menu__link">Главная</a>
                   </li>
                   <li class="menu__item">
