--- a/reviews.html
+++ b/reviews.html
@@ -22,13 +22,13 @@
             </div>
             <nav class="menu">
               <ul class="menu__list">
-                <li class="menu__item">
+                <li class="menu__item ">
                   <a href="./index.html" class="menu__link">Главная</a>
                 </li>
                 <li class="menu__item">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item-active">
                   <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
@@ -288,7 +288,7 @@
                 <li class="menu__item">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item-active">
                   <a href="./reviews.html" class="menu__link">Отзывы</a>
                 </li>
               </ul>
