--- a/services.html
+++ b/services.html
@@ -25,7 +25,7 @@
                 <li class="menu__item">
                   <a href="./index.html" class="menu__link">Главная</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item-active">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
@@ -187,7 +187,7 @@
                 <li class="menu__item">
                   <a href="./index.html" class="menu__link">Главная</a>
                 </li>
-                <li class="menu__item">
+                <li class="menu__item menu__item-active">
                   <a href="./services.html" class="menu__link">Услуги</a>
                 </li>
                 <li class="menu__item">
